--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Привет</title>
 </head>
-<!---->
+<!--FGNJFGNFGN-->
 
 <body>
     <h1>Привет</h1>
